Media manager popup alignment issue

--- a/less/modules/media-manager.less
+++ b/less/modules/media-manager.less
@@ -6,3 +6,7 @@
 	}
 	
 }
+
+#media-library {
+	margin-left: 20px;
+}
